RCP UI: harden launcher startup + add Exit and About menus
Launcher/startup robustness (iped-ui.product + product pom):
- Pin the bundled Java 21 JRE: the rcp-product-windows profile injects
  `-vm ../jre/bin` into the materialized iped-ui.ini so the standalone
  ui/iped-ui launcher (feature 005 case-creation entry, run without the
  case-root shim) no longer falls back to the PATH Java — Java 24+ aborts
  on -Djava.security.manager=allow (JEP 486). Closes the gap vs
  case-launcher-packaging.contract.md line 19.
- Fix slow startup: add -Dosgi.bundlefile.limit=2000. The iped.rcp.libs
  fat bundle has a 475-entry Bundle-ClassPath (engine + Lucene + Tika +
  deps as nested jars); under the default MRU limit Equinox evicted and
  reopened them during class loading, re-parsing each ZIP central
  directory (~1 core pinned ~30s, RSS ~1.3GB). Keeping them open settles
  startup in ~5s, RSS ~217MB.
- Disable the deadlock-prone native splash with -nosplash: it hung racily
  (~1 in 3 launches, both iped-ui.exe and iped-uic.exe) with main blocked
  in JNIBridge._update_splash during EclipseStarter.setStartLevel, before
  the SWT Display exists.

Menus (iped.rcp.app):
- File / Exit (Ctrl+Q): QuitHandler -> IWorkbench.close() (clean e4
  shutdown; LifeCycle @PreSave disposes the session).
- Help / About IPED: AboutDialog (product, version, vendor) with an
  Installation Details dialog (Features / Plugins / Configuration tabs)
  rebuilt in plain SWT/JFace, since pure e4 has no org.eclipse.ui About.

Plus EN + PT-BR localization for the new menu/dialog strings, the model
label keys in LifeCycle, and iped-rcp/CLAUDE.md docs (app-level menus,
launcher/startup/splash notes).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>